test/io/vass/ddata-printing-warning.good
$CHPL_HOME/modules/standard/IO.chpl:1255: warning: printing _ddata class
ddata-printing-warning.chpl:6: error:      *** READ THIS -- IMPORTANT ***     When updating this .good, also update test/distributions/deitz/test_block_representation*.good and any other .good files with the 'printing _ddata class' warning
